[project]
name = "liagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "linhx", email = "linhx1999@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai<2.0.0",
    "tavily~=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black~=23.12.0",
    "pytest~=7.4.0",
    "pytest-mock~=3.14.0",
]
example = [
    "python-dotenv~=1.0.0",
]
model = [
    "vllm~=0.8.0",
    "transformers~=4.52.0"
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"