[project]
name = "liagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "linhx", email = "linhx1999@163.com" }
]
requires-python = "~=3.12"
dependencies = [
    "openai~=1.109.0",
    "tavily~=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black~=23.12.0",
    "pytest~=7.4.0",
    "pytest-mock~=3.14.0",
]

[project.optional-dependencies]
example = [
    "python-dotenv~=1.0.0",
]
rl = [
    "trl~=0.26.2",
    "tensorboardX",
]
